...
        }
      }
    },
    "add notes ..." : {

    },
    "Add Patient" : {
      "comment" : "Add Patient Title",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Patient"
...
        }
      }
    },
    "An hospital administered patient identifier." : {

    },
    "Are you sure you want to delete this patient?" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Are you sure you want to delete this patient?"
          }
...
            "state" : "translated",
            "value" : "Beta"
          }
        }
      }
    },
    "Birthdate" : {

    },
    "Brain Activity" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Brain activity was collected for this patient."
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
        }
      }
    },
    "Chart Layout" : {

    },
    "Close" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
...
            "state" : "translated",
            "value" : "Collect the patient's brain activity using the connected EEG headband."
          }
        }
      }
    },
    "Completed" : {
      "comment" : "Completed Tile. Subtitle",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Completed"
...
    },
    "CONTACTS_NAVIGATION_TITLE" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Contacts"
          }
        }
      }
    },
    "CONTACTS_TAB_TITLE" : {
      "localizations" : {
...
    "Continue Recording" : {

    },
    "Custom" : {

    },
    "Delete" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        }
      }
    },
    "Delete Patient" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete Patient"
          }
...
    "Display Interval" : {

    },
    "Do you want to cancel the ongoing recording?" : {

    },
    "Done" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
...
    "EEG recording could not be started as no patient was selected." : {

    },
    "Electrode Locations" : {

    },
    "enter first name" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "enter first name"
          }
        }
      }
    },
    "enter last name" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "enter last name"
          }
...
        }
      }
    },
    "Failed to upload recording" : {

    },
    "Female" : {

    },
    "FINISHED_SETUP_TEXT" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Live Visualization"
          }
        }
      }
    },
    "M-CHAT R/F" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "M-CHAT R/F"
          }
...
            "state" : "translated",
            "value" : "No EEG Headband connected. You must connect to a nearby EEG device first inorder to perform an EEG."
          }
        }
      }
    },
    "No Patient selected" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No Patient selected"
          }
...
        }
      }
    },
    "Paper" : {

    },
    "Patient Code" : {

    },
    "Patient Details" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "Patient Id"
          }
        }
      }
    },
    "Patient Overview" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Patient Overview"
          }
        }
      }
    },
    "Patients" : {
      "comment" : "Patient List Title",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Patients"
...
    "Samplerate" : {

    },
    "Saving ..." : {

    },
    "Schedule" : {
      "comment" : "Schedule Title",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schedule"
...
            "state" : "translated",
            "value" : "Select a patient to continue."
          }
        }
      }
    },
    "Select Patient" : {
      "comment" : "Principal Select Patient Button placeholder",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select Patient"
...
            "state" : "translated",
            "value" : "NeuroNest"
          }
        }
      }
    },
    "Yes" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yes"
          }
...
            "state" : "translated",
            "value" : "Please sign up to create a new account or log into an existing one."
          }
        }
      }
    },
    "Your Account" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your Account"
          }
...
