...
                        onboardingNavigationPath.nextStep()
                    }
                )
            }
        )
            .navigationBarBackButtonHidden(notificationProcessing)
            .navigationTitle(Text(verbatim: "")) // // Small fix as otherwise "Login" or "Sign up" is still shown in the nav bar
    }
}


#if DEBUG
#Preview {
...
